--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <DOCTYPE htm>
 <html>
     <title>CodeTribe</title>
+    <head>
+        <link rel="stylesheet" href="./style.css">
+    </head>
     <body>
 
         <!--This is the head and it will encompass our logo and our nevigation bar-->
@@ -40,12 +43,18 @@
             <table style="width: 100%; height: 300px;">
                 <tr>
                     <td colspan="2">
-                        <img src="../CodeTribe/Assets/images/IMG-20221027-WA0006.jpg" 
+
+                        <video width="100%" height="1000" controls autoplay muted>
+                            <source src="../CodeTribe/Assets/Video/VID-20230210-WA0011.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+
+                        <!--<img src="../CodeTribe/Assets/images/IMG-20221027-WA0006.jpg" 
                         width="100%" 
                         height="600px" 
                         alt=""
-                        style="object-fit: cover;"
-                    />
+                        style="object-fit: cover;"-->
+                
 
                     </td>
                 </tr>
@@ -53,7 +62,7 @@
                     <td style="padding-left: 20vh; padding-top: 50px">
                         <h2>Bongani Moloi</h2>
                         <p style="width: 100%;">
-                            Bongani Moloi is soon to be a TUT graduate in Information Technology,<br> specialising in business applications that assess how organisations <br> are performing. 
+                            Bongani Moloi is soon going to be a TUT graduate in Information Technology,<br> specialising in business applications that assess how organisations <br> are performing. 
                         </p>
                     </td>
                     <td align="right" style="padding-right: 20vh; padding-top: 30px; padding-bottom: 30px;">
@@ -62,7 +71,8 @@
                         alt=""
                         width="200px"
                         height="200px"
-                        style="border-radius: 50%; object-fit: cover; border: 5px solid gray;"
+                        id="myPicture"
+                        
                     />    
                     </td>
 
