--- a/about_us.html
+++ b/about_us.html
@@ -1,6 +1,7 @@
 <DOCTYPE htm>
     <html>
         <title>About Us</title>
+        <script src="./about_us.js"></script>
         <head>
             <link rel="stylesheet" href="./style.css">
         </head>
@@ -70,13 +71,17 @@
                             </p>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <h3>My Skills:</h3>
+                <div id="skills"></div>
+                        </td>
+                    </tr>
                 </table>
 
-                <h1>Past Experience</h1>
-                <h3>ICEP</h3>
                 
                 <p>
-                    I was doing an internship with ICEP, a community engagement program
+                     <b>My Experience</b> <br> I was doing an internship with ICEP, a community engagement program
                     as a Business analyst for a period of 6 months.
                 </p>
             
